# TopicModels

./: CMakeLists.txt  LICENSE  Makefile  Makefile.in  README.md  config.h.in  configure  configure.ac  editATM.sh  editAll.sh  editLDA.sh
data/: BOW  authors  authors.csv  labels.csv  test.csv  trainBOW
scripts/: atmiomodule.py  bowmodule.py  calcldappl.py  calcldavlb.py  calcldawbic.py  calculate_perplexity.py  deriveatmvlb.py  deriveldavlb.py  derivesldavlb.py  iomodule.py  msmodule.py
src/: ATM.cpp  AuthorFileParser.cpp  BOWFileParser.cpp  CollapsedGibbsSamplerFromATM.cpp  CollapsedGibbsSamplerFromLDA.cpp  GibbsSamplerFromATM.cpp  GibbsSamplerFromHDP.cpp  GibbsSamplerFromLDA.cpp  HDP.cpp  LDA.cpp  LDAWBIC.cpp  LDAWBICMetropolisSampler.cpp  LabelFileParser.cpp  Makefile.am  Makefile.in  MultiLabelFileParser.cpp  OrdinaryGibbsSamplerFromLDA.cpp  VariationalBayesEstimatorOnATM.cpp  VariationalBayesEstimatorOnLDA.cpp  VariationalBayesEstimatorOnSLDA.cpp  sLDA.cpp
src/include/: AuthorFileParser.hpp  BOWFileParser.hpp  CollapsedGibbsSamplerFromATM.hpp  CollapsedGibbsSamplerFromLDA.hpp  GibbsSamplerFromATM.hpp  GibbsSamplerFromHDP.hpp  GibbsSamplerFromLDA.hpp  LDAWBICMetropolisSampler.hpp  LabelFileParser.hpp  MultiLabelFileParser.hpp  OrdinaryGibbsSamplerFromLDA.hpp  VariationalBayesEstimatorOnATM.hpp  VariationalBayesEstimatorOnLDA.hpp  VariationalBayesEstimatorOnSLDA.hpp  utils.hpp
